--- a/index.html
+++ b/index.html
@@ -303,6 +303,10 @@
         </div>
     </div>
 
+    <div style="text-align:center;margin-top:25px;font-size:11px;color:#666;letter-spacing:0.5px;">
+        Created by <strong>Ung MDKKU50</strong>
+    </div>
+
     <script src="chart-analyzer.js"></script>
     <script src="curve-calibration.js"></script>
     <script src="script.js"></script>
